--- a/app/package.json
+++ b/app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/cristiansot/Nutrition-Log",
   "name": "app",
   "version": "0.1.0",
   "private": true,
@@ -6,12 +7,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.11.0",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
