--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cristiansot.github.io/Nutrition-Log/app",
+  "homepage": "https://cristiansot.github.io/Nutrition-Log",
   "name": "app",
   "version": "0.1.0",
   "private": true,
